# surftrak_fixit

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: apm2.py  fake_rf.py  main.py  mav_client.py  setup.py  surftrak_status.py
app/static/: index.html  register_service
app/static/css/: index.css
app/static/js/: index.js
