[project]
name = "surftrak_fixit"
version = "1.0.0-beta.1"
description = "Surftrak Fixit"
license = {text = "MIT"}
requires-python = ">= 3.9"
dependencies = [
    "aiohttp==3.9.5",
    "fastapi==0.109.1",
    "loguru==0.6.0",
    "pydantic==2.7.2",
    "requests==2.32.3",
    "uvicorn==0.13.4",
]

# This is the default build backend, but let's make it explicit
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
